# tradingbot_ksi

./: .env.example  .gitignore  README.md  main.py  plan.md  pyproject.toml
app/: cli.py
app/api/: admin.py  auth.py
app/backtest/: engine.py  metrics.py
app/broker/: base.py  fake_broker.py  kis_broker.py
app/core/: config.py  exceptions.py  logging.py
app/domain/: entities.py  enums.py
app/execution/: order_factory.py  service.py
app/infra/db/: connection.py  models.py
app/infra/repositories/: candle_repo.py  order_repo.py  position_repo.py
app/market_data/: service.py
app/monitoring/: healthcheck.py  notifier.py
app/paper_trading/: service.py
app/portfolio/: calculator.py  service.py
app/risk/: rules.py  service.py
app/strategy/: base.py  moving_average.py  service.py
docs/: api-reference.md  architecture.md  code-review.md  domain-model.md  setup-guide.md  strategy-guide.md
tests/unit/: test_execution.py  test_risk.py  test_strategy.py
tradingbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
